Incluindo nova semântica

--- a/Fonte.HTML
+++ b/Fonte.HTML
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 
     <head>
         <title>Company Travel and Tourism</title>
@@ -10,49 +10,54 @@
 
     <body>
         <h1>Seja bem-vindo a página mais completa de turismo</h1>
+        <hr>
         
-        <div id="Tailandia">
-            <section>
-               <h3 title="Country of continent Asian">TAILANDIA</h3> 
-               <img title="" alt="" height="" width="" src="">
-               <p>Ao lado podemos ver um pouco do maravilhoso templo <abbr title="Templo do Buda Reclinado">Wat Pho</abbr>, este templo que foi concluido por volta do seculo XVI, comporta 400 estatuas que foram levadas pelo Rei Rama I.<br> O complexo do templo abriga a maior coleção de imagens de Buda na Tailândia, incluindo um Buda reclinado de 46 m de comprimento . O templo é considerado o primeiro centro de educação pública na Tailândia, e as ilustrações e inscrições de mármore colocadas no templo para instruções públicas foram reconhecidas por UNESCO em seu Programa Memória do Mundo . Abriga uma escola de medicina tailandesa e também é conhecida como o berço da massagem tradicional tailandesa, que ainda é ensinada e praticada no templo.  </p> 
-               <button title="Veja mais sobre">SEE MORE ABOUT</button> 
-            </section>
-        </div>
+        <section class="Tailandia">
+           <h3 title="Country of continent Asian">TAILANDIA</h3> 
+           <img title="" alt="" height="" width="" src="">
+           <p>Ao lado podemos ver um pouco do maravilhoso templo <abbr title="Templo do Buda Reclinado">Wat Pho</abbr>, este templo que foi concluido por volta do seculo XVI, comporta 400 estatuas que foram levadas pelo Rei Rama I.<br> O complexo do templo abriga a maior coleção de imagens de Buda na Tailândia, incluindo um Buda reclinado de 46 m de comprimento . O templo é considerado o primeiro centro de educação pública na Tailândia, e as ilustrações e inscrições de mármore colocadas no templo para instruções públicas foram reconhecidas por UNESCO em seu Programa Memória do Mundo . Abriga uma escola de medicina tailandesa e também é conhecida como o berço da massagem tradicional tailandesa, que ainda é ensinada e praticada no templo.  </p> 
+            <button title="Veja mais sobre">SEE MORE ABOUT</button> 
+        </section>
 
-        <div id="Espanha">
-            <section>
-                <h3 title="Country of continent European">ESPANHA</h3>
-                <img title="" alt="" height="" width="" src="">
-                <p>A Sagrada Família, é o nome dado a igreja que teve o seu inicio no ano de 1882 e no ano seguinte (1883), o famoso arquieto Antonio Gaudí, assumi tal obra a fim de nos deixarmar mais proximo da passagem de Jesus Cristo.<br>A fachada da igreja, que fica em ruas diferentes, retrata a vida e morte de Jesus Cristo, sendo: o Nascimento (na rua Marina), a Paixão, morte e ressurreição (na rua Sardenya) e a Glória, presente e futuro (na rua Carrer Mallorca). A fachada do Nascimento e a Cripta do Templo Expiatório da Sagrada Família são Patrimônio da Humanidade da UNESCO desde 2005.</p>
-                <button title="Veja mais sobre">SEE MORE ABOUT</button>
-            </section>
-        </div>
+        <section class="Espanha">
+            <h3 title="Country of continent European">ESPANHA</h3>
+            <img title="" alt="" height="" width="" src="">
+            <p>A Sagrada Família, é o nome dado a igreja que teve o seu inicio no ano de 1882 e no ano seguinte (1883), o famoso arquieto Antonio Gaudí, assumi tal obra a fim de nos deixarmar mais proximo da passagem de Jesus Cristo.<br>A fachada da igreja, que fica em ruas diferentes, retrata a vida e morte de Jesus Cristo, sendo: o Nascimento (na rua Marina), a Paixão, morte e ressurreição (na rua Sardenya) e a Glória, presente e futuro (na rua Carrer Mallorca). A fachada do Nascimento e a Cripta do Templo Expiatório da Sagrada Família são Patrimônio da Humanidade da UNESCO desde 2005.</p>
+            <button title="Veja mais sobre">SEE MORE ABOUT</button>
+        </section>
 
-        <div id="Italia">
-            <section>
-                <h3 title="Country of continent European">ITALIA</h3>
-                <img title="" alt="" height="" width="" src="">
-                <p>Além de uma gastronomia invejavel, a <strong>ITALIA</strong> também é conhecida como pais do melhores perfumes e também não podemos esquecer que nela, que foi contruida em 68-79 D.C. O <abbr title="Anfiteatro Flaviano">coliseu</abbr> </p>
-                <button title="Veja mais sobre">SEE MORE ABOUT</button>
-            </section>
-        </div>
+        <section class="Italia">
+            <h3 title="Country of continent European">ITALIA</h3>
+            <img title="" alt="" height="" width="" src="">
+            <p>Além de uma gastronomia invejavel, a <strong>ITALIA</strong> também é conhecida como pais do melhores perfumes e também não podemos esquecer que nela, que foi contruida em 68-79 D.C. O <abbr title="Anfiteatro Flaviano">coliseu</abbr> </p>
+            <button title="Veja mais sobre">SEE MORE ABOUT</button>
+        </section>
 
-        <div id="Estados_Unidos">
-            <section>
-                <h3 title="Country of continent American">Estados Unidos</h3>
-                <img title="" alt="" height="" width="" src="">
-                <p></p>
-                <button title="Veja mais sobre">SEE MORE ABOUT</button>
-            </section>
-       </div>
+        <section class="Estados_Unidos">
+            <h3 title="Country of continent American">Estados Unidos</h3>
+            <img title="" alt="" height="" width="" src="">
+            <p></p>
+            <button title="Veja mais sobre">SEE MORE ABOUT</button>
+        </section>
+        <hr>
     
        <footer>
-           <p>Autor: Bruno de Freitas Trindade</p>
-           <address>
+            <form method="" action="">
+                <label>Nome</label>
+                <input type="text">
+                <label>E-mail</label>
+                <input type="email">
+                <label>Phone</label>
+                <input type="tel"><br>
+                <button>Receber Noticias</button>
+            </form>
+            <!--
+               <address>
+                Bruno de Freitas Trindade
                 E-mail: <a href="https://mail.google.com/mail/u/0/#inbox" target="blank">defreitasbruno2020@gmail.com</a><br>
                 Contato: (19) 99782-4445
             </address>
+            -->
        </footer>
     </body>
 
