Testando meus conhecimentos em Branch

--- a/Fonte.HTML
+++ b/Fonte.HTML
@@ -4,6 +4,7 @@
     <head>
         <title>Company Travel and Tourism</title>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width-devide-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="Style.CSS">
         <link rel="icon" sizes="32x32" title="Logo" href="">
     </head>
@@ -14,8 +15,8 @@
         
         <section class="Tailandia">
            <h3 title="Country of continent Asian">TAILANDIA</h3> 
-           <img title="" alt="" height="" width="" src="">
-           <p>Ao lado podemos ver um pouco do maravilhoso templo <abbr title="Templo do Buda Reclinado">Wat Pho</abbr>, este templo que foi concluido por volta do seculo XVI, comporta 400 estatuas que foram levadas pelo Rei Rama I.<br> O complexo do templo abriga a maior coleção de imagens de Buda na Tailândia, incluindo um Buda reclinado de 46 m de comprimento . O templo é considerado o primeiro centro de educação pública na Tailândia, e as ilustrações e inscrições de mármore colocadas no templo para instruções públicas foram reconhecidas por UNESCO em seu Programa Memória do Mundo . Abriga uma escola de medicina tailandesa e também é conhecida como o berço da massagem tradicional tailandesa, que ainda é ensinada e praticada no templo.  </p> 
+            <img title="" alt="" height="" width="" src="">
+            <p>Ao lado podemos ver um pouco do maravilhoso templo <abbr title="Templo do Buda Reclinado">Wat Pho</abbr>, este templo que foi concluido por volta do seculo XVI, comporta 400 estatuas que foram levadas pelo Rei Rama I.<br> O complexo do templo abriga a maior coleção de imagens de Buda na Tailândia, incluindo um Buda reclinado de 46 m de comprimento . O templo é considerado o primeiro centro de educação pública na Tailândia, e as ilustrações e inscrições de mármore colocadas no templo para instruções públicas foram reconhecidas por UNESCO em seu Programa Memória do Mundo . Abriga uma escola de medicina tailandesa e também é conhecida como o berço da massagem tradicional tailandesa, que ainda é ensinada e praticada no templo.  </p> 
             <button title="Veja mais sobre">SEE MORE ABOUT</button> 
         </section>
 
@@ -41,7 +42,7 @@
         </section>
         <hr>
     
-       <footer>
+        <footer>
             <form method="" action="">
                 <label>Nome</label>
                 <input type="text">
@@ -58,7 +59,7 @@
                 Contato: (19) 99782-4445
             </address>
             -->
-       </footer>
+        </footer>
     </body>
 
 </html>
